--- a/public/style/style.css
+++ b/public/style/style.css
@@ -116,3 +116,10 @@ h1 {
     background-color: #787C7E;
     color: #ffffff;
 }
+
+.resultado{
+    margin-top: 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
